# sigcalc

./: .flake8  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  tox.ini
docs/: api.rst  classes.rst  conf.py  functions.rst  index.rst  license.rst  readme.rst  references.bib
sigcalc/: __init__.py  ascii2py.py  constants.py  physical_constants.py  quantity.py  test_constants.py  test_quantity.py  test_quantity_hypothesis.py
