# ******************************************************************************
#
# sigcalc, significant figures calculations
#
# Copyright 2023 Jeremy A Gray <gray@flyquackswim.com>.
#
# All rights reserved.
#
# SPDX-License-Identifier: GPL-3.0-or-later
#
# ******************************************************************************

[metadata]

author = Jeremy A Gray
author_email = gray@flyquackswim.com
description = significant figures calculations
license = GPL-3.0-or-later
license_files = LICENSE.rst
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Jeremy A Gray
maintainer_email = gray@flyquackswim.com
name = sigcalc
url = https://github.com/jeremyagray/sigcalc
version = 0.0.1

project_urls =
  Issues = https://github.com/jeremyagray/sigcalc/issues
  Documentation = https://sigcalc.readthedocs.io/
  Repository = https://github.com/jeremyagray/sigcalc

classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12

[options]

packages = sigcalc

tests_require =
  black
  factory-boy
  flake8
  flake8-docstrings
  hypothesis
  isort
  pytest
  pytest-cov
